Signed-off-by: James Ferrarelli <jsferr4@gmail.com> Change-Id: I1a0ba2afd137a6171d2fae55107aa2f396f97c32

--- a/Makefile.am
+++ b/Makefile.am
@@ -93,7 +93,10 @@ INKSCAPE_CFLAGS = -I/usr/include/inkscape
 INKSCAPE_LIBS = -L/usr/lib/inkscape -linkscape_base -l2geom
 
 AM_CPPFLAGS += ${GTKMM_CFLAGS} ${GLIBMM_CFLAGS} ${SIGCXX_CFLAGS} ${GLIB_CFLAGS} ${INKSCAPE_CFLAGS}
-AM_LDFLAGS += ${GTKMM_LIBS} ${GLIBMM_LIBS} ${SIGCXX_LIBS} ${GLIB_LIBS} ${INKSCAPE_LIBS}
+AM_LDFLAGS += ${GTKMM_LIBS} ${GLIBMM_LIBS} ${SIGCXX_LIBS} ${GLIB_LIBS}
+
+coolforkit_CFLAGS = ${INKSCAPE_CFLAGS}
+coolforkit_LDADD = ${INKSCAPE_LIBS}
 
 if ENABLE_SSL
 AM_LDFLAGS += ${OPENSSL_LIBS}
